--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
-body{
+body {
     padding: 32px;
 }
 
-.card-header{
+.card-header {
     display: flex;
     justify-content: space-between;
 }
 
-#content{
+#content {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
     justify-content: center;
-    
+
 }
 
-.card-img-top{
-    width: 56%;
-    min-height: auto;
+.card-img-top {
+    width: auto;
+    max-height: 210px;
+    padding: 24px;
+}
+
+.card {
+    cursor: pointer;
+    width: 16rem !important;
+    /* background-color: bisque; */
 }
 
