--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ body {
     padding: 24px;
 }
 
-.card-img-top:hover{
+.card-img-top:hover {
     filter: drop-shadow(0 0 0.5rem);
+    scale: 1.6;
 }
 
 .card {
@@ -33,13 +34,13 @@ body {
     /* background-color: bisque; */
 }
 
-.card:hover{
+.card:hover {
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.8);
     animation: 250ms slidein ease-in-out;
     transform: scale(1.05);
 }
 
-.card-body{
+.card-body {
     display: flex;
     justify-content: space-around;
 }
@@ -50,7 +51,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.9);
+    justify-content: space-evenly;
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 99;
     position: fixed;
     top: 0px;
@@ -58,23 +60,57 @@ body {
     right: 0px;
     bottom: 0px;
     padding-top: 32px;
-    flex-direction: column;
+    /* flex-direction: column; */
 }
 
-.dialog {
+.dialog-card {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.big-card-container {
     height: 80vh;
     display: flex;
     align-items: center;
-    width: 100%;
-    justify-content: center;
+    width: 30rem;
+    border-radius: 24px;
+    flex-direction: column;
+    background-color: white;
 }
 
 .d-none {
     display: none;
 }
 
+.bigPictureCard {
+    height: 20rem;
+    margin-bottom: 60px;
+    scale: 1.3;
+}
 
+.bigCardHeader {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
 
+.bigCardType {
+    display: flex;
+    justify-content: space-between;
+}
+
+.arrow {
+    width: 88px;
+    cursor: pointer;
+}
+
+.right-dialog-arrow-container,
+.left-dialog-arrow-container {
+    display: flex;
+    align-items: center;
+}
 
 /* .grass{
     background-color: #78c850;
