--- a/style.css
+++ b/style.css
@@ -71,10 +71,11 @@ body {
 }
 
 .big-card-container {
-    height: 80vh;
+    aspect-ratio: 1 / 2;
+    height: 90vh;
     display: flex;
     align-items: center;
-    width: 30rem;
+    /* width: 30rem; */
     border-radius: 24px;
     flex-direction: column;
     background-color: white;
@@ -84,19 +85,20 @@ body {
     display: none;
 }
 
-.bigPictureCard {
-    height: 20rem;
-    margin-bottom: 60px;
+.big-picture-card {
+    width: 80%;
+    margin-bottom: 42px;
     scale: 1.3;
+    filter: drop-shadow(8px 8px 0.2rem);
 }
 
-.bigCardHeader {
+.big-card-header {
     display: flex;
     width: 100%;
     justify-content: space-evenly;
 }
 
-.bigCardType {
+.big-card-type {
     display: flex;
     justify-content: space-between;
 }
@@ -110,6 +112,13 @@ body {
 .left-dialog-arrow-container {
     display: flex;
     align-items: center;
+}
+
+.info-container{
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    background-color: white;
 }
 
 /* .grass{
