--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ body {
 }
 
 .big-card-container {
-    aspect-ratio: 1 / 2;
-    height: 90vh;
+    /* aspect-ratio: 1 / 2.5; */
+    height: 40rem;
     display: flex;
     align-items: center;
     /* width: 30rem; */
@@ -92,15 +92,20 @@ body {
     filter: drop-shadow(8px 8px 0.2rem);
 }
 
+.big-card-top {
+    width: 100%;
+    text-align: center;
+}
+
 .big-card-header {
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .big-card-type {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .arrow {
@@ -124,7 +129,7 @@ body {
 ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    /* margin: 0; */
     display: flex;
     gap: 6%;
     display: flex;
@@ -157,97 +162,41 @@ section div {
     height: 50%;
 }
 
+.h-100 {
+    height: 100%;
+}
+.h5 {
+    padding: 24px 0 7px 0;
+}
+
+.table-baseStats {
+    height: 40%;
+}
+
+.about-character {
+    height: 80%;
+}
 
 .about-table-pokemon {
-    width: 88%;
+    width: 100%;
     height: 69%;
     margin-left: 8px;
 }
 
-.w-100p{
+.w-100p {
     width: 60%;
 }
 
-.progress{
+.progress {
     height: 8px;
 }
 
-
-
-
-
-
-
-
-/* .grass{
-    background-color: #78c850;
+.load-more-btn {
+    margin-top: 32px;
 }
 
-.fire{
-    background-color: #f08030;
+.w-90 {
+    width: 90px;
 }
 
-.water{
-    background-color: #6890f0;
-}
 
-.bug{
-    background-color: #a8b820;
-}
-
-.normal{
-    background-color: #a8a878;
-}
-
-.poison{
-    background-color: #a040a0;
-}
-
-.ground{
-    background-color: #e0c068;
-}
-
-.electric{
-    background-color: #f8d030;
-}
-
-.fairy{
-    background-color: #f0b6bc;
-}
-
-.dark{
-    background-color: #705848;
-}
-
-.dragon{
-    background-color: #7038f8;
-}
-
-.fighting{
-    background-color: #c03028;
-}
-
-.flying{
-    background-color: #a890f0;
-}
-
-.ghost{
-    background-color: #705898;
-}
-
-.ice{
-    background-color: #98d8d8;
-}
-
-.psychic{
-    background-color: #f85888;
-}
-
-.rock{
-    background-color: #b8a038;
-}
-
-.steel{
-    background-color: #b8b8d0;
-}
- */
