--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     padding: 32px;
+    margin: 0px;
+    background-color: #434343;
 }
 
 .card-header {
@@ -15,10 +17,15 @@ body {
 
 }
 
+.btn-container{
+    position: sticky;
+    bottom: 6px;
+}
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
     height: fit-content;
     margin-bottom: 32px;
@@ -102,20 +109,26 @@ body {
     filter: drop-shadow(8px 8px 0.2rem);
 }
 
+.big-card-type-name{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .big-card-top {
     width: 100%;
     text-align: center;
 }
 
-.big-card-header {
+/* .big-card-header {
     display: flex;
     width: 100%;
     justify-content: space-around;
-}
+} */
 
 .big-card-type {
     display: flex;
-    justify-content: space-evenly;
+    gap: 72px;
 }
 
 .arrow {
@@ -285,5 +298,45 @@ section div {
 
     100% {
         clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0)
+    }
+}
+
+@media (min-width:501px) {
+    .mini-arrow{
+        display: none;
+    }
+}
+
+@media (max-width:500px) {
+    .arrow-under-img-container {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 24px;
+    }
+
+    .right-dialog-arrow-container,
+    .left-dialog-arrow-container {
+        display: none;
+        cursor: initial;
+        cursor: pointer;
+    }
+
+    .mini-arrow {
+        height: 48px;
+        cursor: pointer;
+    }
+
+    .arrow-under-img {
+        height: 32px;
+        cursor: pointer;
+        border-radius: 48px;
+        background-color: #434343;
+        padding: 13px;
+    }
+
+    .dialogImage {
+        border-radius: 8px;
+        max-height: 70vh;
+        max-width: 95vw;
     }
 }
